--- a/views/index.html
+++ b/views/index.html
@@ -24,10 +24,10 @@
           PAST CONTINUOUS
         </a>
         <ul class="navbar-menu">
-          <li><a href="/" class="navbar-link">Inicio</a></li>
-          <li><a href="/views/practice.html" class="navbar-link">Práctica</a></li>
+          <li><a href="/" class="navbar-link">Home</a></li>
+          <li><a href="/practice" class="navbar-link">Practice</a></li>
           <li><a href="/views/login.html" class="navbar-link">Login</a></li>
-          <li><a href="/views/register.html" class="btn btn-primary btn-sm">Empezar</a></li>
+          <li><a href="/views/register.html" class="btn btn-primary btn-sm">Start</a></li>
         </ul>
       </div>
     </div>
@@ -43,8 +43,8 @@
           ¡Domina el pasado continuo en inglés de forma divertida!
         </p>
         <div class="flex gap-3 justify-center fade-in">
-          <a href="/views/register.html" class="btn btn-lg btn-primary">EMPEZAR AHORA</a>
-          <a href="#features" class="btn btn-lg btn-secondary">VER MÁS</a>
+          <a href="/practice" class="btn btn-lg btn-primary">START PRACTICE ✨</a>
+          <a href="#features" class="btn btn-lg btn-secondary">Learn More</a>
         </div>
       </div>
     </div>
