--- a/views/register.html
+++ b/views/register.html
@@ -147,7 +147,7 @@
 
           // Redirigir a practice
           setTimeout(() => {
-            window.location.href = '/views/practice.html';
+            window.location.href = '/practice';
           }, 1500);
 
         } else {
